# sandbox

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile
databases/arangodb/: .gitignore  Makefile  main.py  pyproject.toml  schemas.py
languages/cpp/playground/: .bazelrc  .clang-tidy  .tool-versions  AGENTS.md  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  WORKSPACE  justfile  test.md
languages/cpp/playground/Main/: BUILD  main.cc
languages/cpp/playground/VString/: BUILD  VString.cc  VString.h  VString_test.cc  vstring.cc  vstring.h  vstring_test.cc
languages/cpp/playground/algos/: BUILD  algos_test.cc  binary_tree.h  binary_tree_test.cc  fibo_test.cc  intervals.cc  intervals.h  intervals_test.cc  linked_list.cc  linked_list.h  linked_list_test.cc  nsum_test.cc
languages/cpp/playground/aoc/1/: BUILD
languages/cpp/playground/builder/: BUILD  builder.cc  builder.h  builder_test.cc
languages/cpp/playground/concurrent/: BUILD  atomic_test.cc
languages/cpp/playground/constexpr/: constexpr_test.cc
languages/cpp/playground/cpp_features/constexpr/: BUILD  constexpr.h  constexpr_test.cc
languages/cpp/playground/cpp_features/forward/: BUILD  forward.cc  forward.h  forward_test.cc
languages/cpp/playground/cpp_features/init_conv/: BUILD  init_conv.cc  init_conv.h  init_conv_test.cc
languages/cpp/playground/cpp_features/move_semantics/: move_semantics.cc  move_semantics.h  move_semantics_test.cc
languages/cpp/playground/cpp_features/rvo/: rvo.cc  rvo.h  rvo_test.cc
languages/cpp/playground/cpp_features/sfinae/: BUILD  sfinae.cc  sfinae.h
languages/cpp/playground/cpp_features/templates/: BUILD  sfinae.cc  sfinae.h  templates.cc  templates.h
languages/cpp/playground/disassembly/: BUILD  main.cc
languages/cpp/playground/exercises/lru_cache/: BUILD  doubly_linked_list.cc  doubly_linked_list.h  doubly_linked_list_test.cc
languages/cpp/playground/forward/: forward.cc  forward.h  forward_test.cc
languages/cpp/playground/functor/: BUILD  functor.h  functor_test.cc
languages/cpp/playground/include/: MyString.h
languages/cpp/playground/mains/: main.cc
languages/cpp/playground/monads/: BUILD  monads.cc  monads.h  monads_test.cc
languages/cpp/playground/move_semantics/: BUILD  move_semantics.cc  move_semantics_test.cc
languages/cpp/playground/nanobind/: BUILD  README.md  TODO.md  pyproject.toml  requirements_lock.txt  requirements_lock_3.13.txt  requirements_lock_3.14.txt
languages/cpp/playground/nanobind/nanobind_playground/: BUILD  __init__.py  nn.cpp
languages/cpp/playground/nanobind/nanobind_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
languages/cpp/playground/nanobind/test/: BUILD  test_back_and_forth.py  test_capsule.py  test_dummy.py  test_exceptions.py  test_exchange_and_ownership.py  test_exchanging_information.py  test_numpy.py  test_py_callable.py  test_refcount.py
languages/cpp/playground/patterns/builder/: builder.cc  builder_test.cc
languages/cpp/playground/patterns/functor/: functor.cc  functor.h  functor_test.cc
languages/cpp/playground/patterns/monads/: BUILD  monads.cc  monads.h  monads_test.cc
languages/cpp/playground/patterns/newtype/: BUILD  newtype.cc  newtype.h  newtype_test.cc
languages/cpp/playground/patterns/reflection/: BUILD  reflection.h
languages/cpp/playground/patterns/type_erasure/: BUILD  type_erasure.cc  type_erasure.h  type_erasure_test.cc
languages/cpp/playground/perf/: BUILD  matmul_bench.cc  vector_update_bench.cc
languages/cpp/playground/ranges/: BUILD  ranges_test.cc  ranges_types_test.cc
languages/cpp/playground/ranges_v3/: BUILD  ranges_v3.cc  ranges_v3.h  ranges_v3_test.cc
languages/cpp/playground/rvo/: BUILD  rvo.cc  rvo.h  rvo_test.cc
languages/cpp/playground/src/: MyString.cpp  main.cpp
languages/cpp/playground/utils/: BUILD  build_error_tester.cc  build_error_tester.h
languages/cpp/playground/vstring/: vstring.cc  vstring.h  vstring_test.cc
languages/python/dagster_playground/: .envrc  .gitignore  Dockerfile  README.md  dagster.yaml  justfile  pyproject.toml
languages/python/dagster_playground/dagster_playground/defs/: assets.py  resources.py
languages/python/dagster_playground/dagster_playground/tutorial/: __init__.py  assets.py
languages/python/dagster_playground/tests/: test_job.py
languages/python/dagster_university/: pyproject.toml
languages/python/dagster_university/dagster_university/assets/: metrics.py  trips.py
languages/python/playground/: .envrc  pyproject.toml
languages/python/playground/advent_of_code/: _1_historian_hysteria.py  _2_red_nosed_reports.py  _3_mull_it_over.py  _4_ceres_search.py  _5_print_queue.py  _6_guard_gallivant.py  _7_bridge_repair.py  _8_resonent_collinearity.py  _9_disk_fragmenter.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
languages/python/playground/algos/data_structures/: linked_list.py  test_linked_list.py  test_tree.py  tree.py
languages/python/playground/algos/dynamic_programming/: generate_parentheses.py  longest_increasing_subsequence.py  maximum_subarray.py  sudoku.py
languages/python/playground/algos/graphs/: number_of_islands.py
languages/python/playground/algos/intervals/: merge_intervals.py
languages/python/playground/algos/lists/: longest_palindrom_subsequence.py  longest_subsequence.py  merge_lists.py  nsum.py  reverse_list.py  test_nsum.py
languages/python/playground/algos/trees/: binary_tree_max_path_sum.py  diameter_binary_tree.py  flip_equivalent_trees.py
languages/python/playground/libs/geo/: greater_london.geojson  north_greenwich_peninsula.geojson  paris.geojson  test_geopandas.py
languages/python/playground/perf/: test_perf.py
languages/python/playground/playground/: dataclasses_playground.py  generator_playground.py  pydantic_playground.py  simulation.py  test_pydantic.py  types_playground.py  vectorization.py
languages/python/tapl/: Makefile  pyproject.toml
languages/python/tapl/tapl/: arithmetics.py  eval.py  grammar.lark  parser.py
languages/python/tapl/tests/: test_eval.py  test_parsers.py
(+271 files in other folders)
