###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "google_benchmark", version = "1.9.4")

# Boost
# Famous C++ library that has given rise to many new additions to the C++ Standard Library
# Makes @boost available for use: For example, add `@boost//:algorithm` to your deps.
# For more, see https://github.com/nelhage/rules_boost and https://www.boost.org
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz",
    strip_prefix = "rules_boost-master",
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    # integrity = "sha256-...",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)


# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).

)

##############
## NANOBIND ##
##############

# The major version of nanobind-bazel is equal to the version
# of the internally used nanobind.
# In this case, we are building bindings with nanobind v2.9.2.
bazel_dep(name = "nanobind_bazel", version = "2.9.2")
# version 1.7.0 break hedron?
bazel_dep(name = "rules_python", version = "1.6.3")

"""
Not really necessary for py_library, but required for:
    - py_binary
    - py_test
?

This probably also provides:
    - python development headers
    - libpython3.x.so
    - ...
"""
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14",
    configure_coverage_tool = True
)
python.toolchain(
    python_version = "3.13",
    configure_coverage_tool = True
)
python.defaults(python_version = "3.13")

# Brings python_versions into scope as "python"
use_repo(python, python = "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
"""
uv pip compile pyproject.toml --python-version 3.14 -o requirements_lock_3.13.txt
"""
pip.parse(
    python_version = "3.13",
    hub_name = "pip_3.13",
    requirements_lock = "//nanobind:requirements_lock_3.13.txt",
)

"""
uv pip compile pyproject.toml --python-version 3.14 -o requirements_lock_3.14.txt
"""
pip.parse(
    python_version = "3.14",
    hub_name = "pip_3.14",
    requirements_lock = "//nanobind:requirements_lock_3.14.txt",
)
use_repo(pip, "pip_3.13", "pip_3.14")
