[tool.poetry]
name = "dagster_university"
version = "0.1.0"
description = ""
authors = ["Vinh Chuc <vinh.chuc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
dagster = "^1.7.10"
dagster_duckdb_pandas = "*"
dagster_duckdb = "*"
dagster-cloud = "*"
duckdb = "^1.0.0"
fspec = "^2024.3.1"
geopandas = "*"
gcsfs = "^2024.6.0"
kaleido = "0.2.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "*"
python = "3.12.*"
pydantic = "^2.7.1"
requests = "*"
shapely = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
dagster-webserver = "*"
factory-boy = "^3.3.0"
Faker = "18.4.0"
hypothesis = "^6.103.2"
matplotlib = "*"
ipython = "^8.25.0"
pyright = "^1.1.367"
pytest = "^8.2.2"
ruff = "^0.4.9"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_university"

[tool.ruff.lint]
extend-ignore = [
  # (Unused import): We stub some files with just imports to help people get started
  "F401",    
  # (Import block is un-sorted or un-formatted): It's more important that we introduce the imports in the order they're used rather than alphabetically.
  "I001",
]
