[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [{ name = "Vinh Chuc", email = "vinh.chuc@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "altair>=5.5.0",
    "debugpy>=1.8.17",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pytest-xdist>=3.8.0",
    "scipy>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "hypothesis>=6.140.3",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
