[tool.poetry]
name = "tapl"
version = "0.1.0"
description = ""
authors = ["Vinh Chuc <vinh.chuc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
lark = "^1.1.9"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23"
hypothesis = "^6.100"
pytest = "^8.1.1"
pyright = "^1.1.357"
ruff = "^0.3.5"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = []
fixable = ["ALL"]

[tool.pyright]
include = ["tapl", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
