[project]
name = "nanobind-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipython>=9.7.0",
    "numpy>=2.3.5",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "setuptools>=80.9.0",
    "pyarrow>=23.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
